--- a/cinema/estados/sp.html
+++ b/cinema/estados/sp.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h3> <a href="file:///C:/Users/FIC-TI%20Avan%C3%A7ado/Desktop/vitor%20aguiar/cinema/index.html">Voltar para o inicio</a></h3>
-
+    <h3> <a href="/cinema/index.html">Voltar para o inicio</a></h3>
+    
     <h1>São Paulo</h1>
 
     <p class="Hoje">Lisbela e o Prisioneiro - 20:00 - Hoje</p>
