--- a/cinema/estados/rj.html
+++ b/cinema/estados/rj.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h3> <a href="file:///C:/Users/FIC-TI%20Avan%C3%A7ado/Desktop/vitor%20aguiar/cinema/index.html">Voltar para o inicio</a></h3>
+    <h3> <a href="/cinema/index.html">Voltar para o inicio</a></h3>
 
     <h1>Rio de Janeiro </h1>
 
